SERVER-16429 Add ScopedTransaction to AutoGetCollectionForRead and Map-reduce